--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -12,7 +12,7 @@
 	<div class="foncé"></div>
 	<section class="bleu">
 		<p class="red">css zen garden</p>
-		<h1><span>The Beauty</span><span> of CSS </span> Design</h1>
+		<h1><span>The Beauty</span><span>of <span class="css">CSS</span></span> Design</h1>
 			<p class="texte">A demonstration of what can be accomplished through css-base design. Select any style sheet from the list to load it into this page.</p>
 			<p class="texte2">DOWNLOAD THE EXAMPLE <span> HTML FILE </span> AND <span> CSS FILE </span></p>
 			<div class="jaune">
